<resources tools:ignore="ExtraTranslation" xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Recording</string>
    <string name="app_title">Sound Recorder</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="stop">Stop</string>
    <string name="play">Play</string>
    <string name="delete">Delete</string>
    <string name="start_recording_toast_message">Recording has been started!</string>
    <string name="stop_recording_toast_message">You are not recording right now!</string>
    <string name="pause_recording_toast_message">Recording has been paused</string>
    <string name="resume_recording_toast_message">Recording has been resumed</string>
    <string name="play_recording_toast_message">Recording is being played</string>
    <string name="stop_playback_toast_message">Playback has been stopped</string>
    <string name="stop_recording_before_toast_message">Stop recording before performing this action</string>
    <string name="deleted_recording_toast_message">Recording has been Deleted</string>
    <string name="no_recording_toast_message">Recording Doesn\'t exist</string>

    <string name="permission_needed">Access Your Microphone</string>
    <string name="permission_denied_read">To enable access to your microphone and recording, go to Settings > Permissions and turn on Microphone and Storage.</string>

    <!-- AdMob ad unit IDs -->
    <string name="admob_app_id">ca-app-pub-1624130677099435~5935616527</string>
    <string name="banner_home_footer">ca-app-pub-1624130677099435/2609904594</string>
</resources>
