<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/recording_image_background"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@id/textview_sound_recorder_heading"
        android:background="@drawable/circle"
        android:layout_marginTop="56dp"
        app:layout_constraintDimensionRatio="1:1.6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        ads:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/recording_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@id/textview_sound_recorder_heading"
        android:layout_marginTop="56dp"
        android:background="@drawable/circle"
        android:padding="20dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_microphone"
        app:layout_constraintDimensionRatio="1:1.6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        ads:layout_constraintTop_toTopOf="parent" />

    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/recording_image"
        android:layout_marginTop="300dp"
        android:textSize="20sp"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black_36"
        ads:layout_constraintBottom_toTopOf="@id/button_delete_recording"
        android:layout_marginBottom="48dp"/>

    <ImageButton
        android:id="@+id/button_delete_recording"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/white_circle_grey_border"
        android:contentDescription="@string/delete"
        android:padding="12dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_delete"
        android:visibility="visible"
        ads:layout_constraintLeft_toLeftOf="parent"
        ads:layout_constraintRight_toLeftOf="@id/button_start_recording"
        ads:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="48dp"/>

    <ImageButton
        android:id="@+id/button_start_recording"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/white_circle_grey_border"
        android:contentDescription="@string/start"
        android:padding="12dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_mic"
        android:visibility="visible"
        app:layout_constraintLeft_toRightOf="@id/button_delete_recording"
        app:layout_constraintRight_toLeftOf="@id/button_pause_recording"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="48dp" />

    <ImageButton
        android:id="@+id/button_pause_recording"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/white_circle_grey_border"
        android:contentDescription="@string/pause"
        android:padding="12dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_pause"
        android:visibility="visible"
        app:layout_constraintLeft_toRightOf="@id/button_start_recording"
        app:layout_constraintRight_toLeftOf="@id/button_stop_recording"
        ads:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="48dp"/>

    <ImageButton
        android:id="@+id/button_stop_recording"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/white_circle_grey_border"
        android:contentDescription="@string/stop"
        android:padding="12dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_stop"
        android:visibility="visible"
        app:layout_constraintLeft_toRightOf="@id/button_pause_recording"
        app:layout_constraintRight_toRightOf="parent"
        ads:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="48dp"/>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:visibility="gone"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-1624130677099435/2609904594"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>